# workspace

./: .gitignore  Cabal  README.md  cabal.project  ghci.conf  lambdaray.cabal  lambdaray.cap  stack.yaml
.github/workflows/: haskell.yml
GPipe/: GPipe.cabal
GPipe-Core/: .gitignore  CHANGELOG.md  GPipe-Core.cabal  ghci.conf
GPipe-Core/.github/workflows/: haskell.yml
GPipe-Core/bench/: bench.hs  simple.hs
GPipe-Core/bench/Graphics/GPipe/: ExprBench.hs  ExprBenchSimple.hs
GPipe-Core/bench/LambdaRay/: Config.hs
GPipe-Core/src/Data/: SNMap.hs
GPipe-Core/src/Data/IntMap/: Polymorphic.hs
GPipe-Core/src/Data/IntMap/Polymorphic/: Strict.hs  Type.hs
GPipe-Core/src/Graphics/: GPipe.hs
GPipe-Core/src/Graphics/GPipe/: Buffer.hs  Expr.hs  FragmentStream.hs  FrameBuffer.hs  GeometryStream.hs  Linear.hs  Optimizer.hs  PrimitiveArray.hs  PrimitiveStream.hs  Sampler.hs  TransformFeedback.hs  Uniform.hs
GPipe-Core/src/Graphics/GPipe/Debugger/: Compile.hs  Eval.hs  PrimFuns.hs  Value.hs
GPipe-Core/src/Graphics/GPipe/Internal/: Buffer.hs  Compiler.hs  Context.hs  Debug.hs  Expr.hs  Format.hs  FragmentStream.hs  FrameBuffer.hs  GeometryStream.hs  IDs.hs  Linear.hs  Optimizer.hs  Orphans.hs  PrimitiveArray.hs  PrimitiveStream.hs  Shader.hs  Texture.hs  TransformFeedback.hs  Uniform.hs
GPipe-Core/src/Graphics/GPipe/Optimizer/: ConstExpr.hs  DFG.hs  Decls.hs  Deinline.hs  FunctionGenerator.hs  GLSL.hs  Liveness.hs  PeepHole.hs  StructuralEquality.hs
GPipe-Core/test/Graphics/GPipe/: ExprSpec.hs
GPipe-Core/test/Graphics/GPipe/Debugger/: EvalSpec.hs
GPipe-Core/test/Graphics/GPipe/Optimizer/: DeinlineSpec.hs  GLSLSpec.hs
GPipe-Core/test/Language/GLSL/Runtime/: EvalSpec.hs
GPipe-Core/test/Test/: GLSL.hs
GPipe-Core/tools/: optshader.hs
GPipe-Engine/: GPipe-Engine.cabal  README.md
GPipe-Engine/.github/workflows/: haskell.yml
GPipe-Engine/src/Graphics/Formats/: STL.hs
GPipe-Engine/src/Graphics/Formats/STL/: Parser.hs  Types.hs
GPipe-Engine/src/Graphics/GPipe/: Engine.hs
GPipe-Engine/src/Graphics/GPipe/Engine/: STL.hs  TimeIt.hs
GPipe-Fonts/: GPipe-Fonts.cabal
GPipe-Fonts/src/Graphics/GPipe/Fonts/: Atlas.hs  Common.hs  SimpleDistanceField.hs
GPipe-GLFW/: CHANGELOG.md  GPipe-GLFW.cabal
GPipe-GLFW/bench/: bench.hs
GPipe-GLFW/test/Graphics/GPipe/GeometryStream/: IdentitySpec.hs  Shader2DSpec.hs
GPipe-GLFW/test/Test/: Common.hs  ShaderTest.hs
GPipe-GLFW/tools/: gshader3d_test.hs  gshader_identity_test.hs  gshader_test.hs  playground.hs
GPipe-GLFW4/: CHANGELOG.md  GPipe-GLFW4.cabal  LICENSE  README.md  stack.yaml
GPipe-GLFW4/.github/workflows/: haskell.yml
GPipe-GLFW4/bench/Graphics/GPipe/: BufferBench.hs
GPipe-GLFW4/generated-shaders/: README.md
GPipe-GLFW4/src/Graphics/GPipe/Context/: GLFW.hs
GPipe-GLFW4/src/Graphics/GPipe/Context/GLFW/: Calls.hs  Format.hs  Handler.hs  Misc.hs  Window.hs
GPipe-GLFW4/test/Graphics/GPipe/: BufferSpec.hs
GPipe-GLFW4/test/Graphics/GPipe/Context/GLFW/: CloseSpec.hs  FixedSpec.hs  InputSpec.hs  MultiPassSpec.hs
GPipe-GLFW4/test/Graphics/GPipe/GeometryStream/: Shader3DSpec.hs
GPipe-GLFW4/test/Test/: Control.hs
GPipe/src/Data/: SNMap.hs
GPipe/src/Data/IntMap/: Polymorphic.hs
GPipe/src/Data/IntMap/Polymorphic/: Lazy.hs
GPipe/src/Graphics/: GPipe.hs
GPipe/src/Graphics/GPipe/: Context.hs  Format.hs  FragmentStream.hs  Orphans.hs  PrimitiveArray.hs  Shader.hs  Texture.hs
GPipe/src/Graphics/GPipe/Internal/: Buffer.hs  Compiler.hs  Context.hs  Expr.hs  FragmentStream.hs  FrameBuffer.hs  IDs.hs  Linear.hs  PrimitiveStream.hs  Shader.hs  Texture.hs  Uniform.hs
GPipe/test/Graphics/GPipe/: ExprSpec.hs
STL/: STL.cabal
STL/src/Graphics/Formats/STL/: Parser.hs  Printer.hs
bench/Graphics/GPipe/: TextureBench.hs
data/: shader.frag  shader.vert
glsl/: CHANGELOG.md  LICENSE  README.md  glsl.cabal
glsl/.github/workflows/: haskell.yml
glsl/src/Language/GLSL/: AST.hs  BitCode.hs  ConstExpr.hs  Decls.hs  Optimizer.hs  Parser.hs  PrettyPrint.hs  StructuralEquality.hs  Types.hs
glsl/src/Language/GLSL/Internal/: Bits.hs
glsl/src/Language/GLSL/Runtime/: Eval.hs  (+3 more)
glsl/test/Language/GLSL/: BitCodeSpec.hs  GLSLSpec.hs  StructuralEqualitySpec.hs
glsl/test/Test/: GLSL.hs
glsl/test/Test/GLSL/: Arbitrary.hs
glsl/test/data/large-shaders/: .gitignore  lambdacnc.frag  lambdacnc.vert  lambdaray.frag  small.vert  xax.frag  xax.vert
glsl/tools/: optshader.hs
lambdacnc/: README.md  ghci.conf  lambdacnc.cabal  lambdacnc.cap
lambdacnc/data/models/: Bed.stl  Ground.stl  ZAxis.stl  lightbulb.stl
lambdacnc/src/LambdaCN/: TimeIt.hs
lambdacnc/src/LambdaCNC/: Config.hs  GPU.hs  Pipeline.hs  STL.hs  Shaders.hs
lambdacnc/src/LambdaCNC/Shaders/: Blend.hs  Bulb.hs  Common.hs  GaussianBlur.hs  LightInfo.hs  Quad.hs  QuadColor.hs  Shadow.hs  Solids.hs
lambdacnc/src/LambdaCNC/Shaders/Deferred/: Geometry.hs
lambdacnc/src/LambdaCnc/: Config.hs  GPU.hs  STL.hs  Shaders.hs  TimeIt.hs
lambdacnc/tools/: lambdacnc.hs
lambdaray/: CHANGELOG.md  LICENSE  ghci.conf  lambdaray.cabal
lambdaray/src/LambdaRay/: Config.hs  GPU.hs  Schwarzschild.hs
lambdaray/tools/: lambdaray.hs
livecoding/: LICENSE  livecoding.cabal
livecoding/src/Debug/: LiveCoding.hs
scenegraph/: scenegraph.cabal  test.dot
scenegraph/.github/workflows/: haskell.yml
scenegraph/src/Graphics/: SceneGraph.hs
scenegraph/src/Graphics/SceneGraph/: Basic.hs  BoundingBox.hs  Matrix.hs  Render.hs  Types.hs  Visualise.hs
scenegraph/test/Graphics/SceneGraph/: BasicSpec.hs  BoundingBoxSpec.hs  VisualiseSpec.hs
src-static/Data/: SNMap.hs
src-static/Graphics/GPipe/: Buffer.hs  Expr.hs  FrameBuffer.hs  Sampler.hs
src-static/Graphics/GPipe/Context/: GLFW.hs
src-static/Graphics/GPipe/Internal/: Buffer.hs  Compiler.hs  Context.hs  Expr.hs  Format.hs  FragmentStream.hs  FrameBuffer.hs  PrimitiveArray.hs  PrimitiveStream.hs  Shader.hs  Texture.hs  Uniform.hs
src-static/LambdaRay/: Dynamic.hs
src/LambdaRay/: CPU.hs  CPUImage.hs  Config.hs  Dynamic.hs  GPU.hs  Main.hs  Schwarzschild.hs
test/Graphics/GPipe/: BufferSpec.hs
tools/: lambdaray.hs
(+30 files in other folders)
