name:                lambdaray
version:             0.0.1
synopsis:            GPU Ray Tracer
description:         GPU Ray Tracer
homepage:            https://homectl.org/lambdaray
license:             BSD3
license-file:        LICENSE
author:              pippijn
maintainer:          pippijn@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/homectl/lambdaray

library
  default-language:    Haskell2010
  exposed-modules:
      LambdaRay.CPU
      LambdaRay.CPUImage
      LambdaRay.Dynamic
      LambdaRay.GPU
      LambdaRay.Schwarzschild
  ghc-options:
      -Wall
  hs-source-dirs: src
  build-depends:
      base              >= 4 && < 5
    , GLFW-b
    , GPipe
    , GPipe-GLFW
    , ghc
    , ghc-paths
    , lens
    , time

executable lambdaray
  hs-source-dirs:   tools
  main-is:          lambdaray.hs
  default-language: Haskell2010
  ghc-options:
      -Wall
      -threaded
  build-depends:
      base < 5
    , lambdaray
