name:                lambdaray
version:             0.0.1
synopsis:            GPU Ray Tracer
description:         GPU Ray Tracer
homepage:            https://homectl.org/lambdaray
license:             BSD3
license-file:        LICENSE
author:              pippijn
maintainer:          pippijn@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/homectl/lambdaray

library
  default-language:    Haskell2010
  hs-source-dirs: src, src-static
  exposed-modules:
      Graphics.GPipe.Context.GLFW
      Graphics.GPipe.Context.GLFW.Input
      Graphics.GPipe.Context.GLFW.Window
      Graphics.GPipe.Context.GLFW.Misc
      Graphics.GPipe
      Graphics.GPipe.Buffer
      Graphics.GPipe.Context
      Graphics.GPipe.Expr
      Graphics.GPipe.Format
      Graphics.GPipe.FragmentStream
      Graphics.GPipe.FrameBuffer
      Graphics.GPipe.PrimitiveArray
      Graphics.GPipe.PrimitiveStream
      Graphics.GPipe.Sampler
      Graphics.GPipe.Shader
      Graphics.GPipe.Texture
      Graphics.GPipe.Uniform
      Graphics.GPipe.Orphans
      LambdaRay.Config
      LambdaRay.GPU
      LambdaRay.Schwarzschild
      -- Internal, don't use except in tests.
  -- other-modules:
      Data.SNMap
      Graphics.GPipe.Context.GLFW.Calls
      Graphics.GPipe.Context.GLFW.Resource
      Graphics.GPipe.Context.GLFW.Wrappers
      Graphics.GPipe.Context.GLFW.Format
      Graphics.GPipe.Context.GLFW.Handler
      Graphics.GPipe.Context.GLFW.RPC
      Graphics.GPipe.Context.GLFW.Logger
      Graphics.GPipe.Internal.Buffer
      Graphics.GPipe.Internal.Compiler
      Graphics.GPipe.Internal.Context
      Graphics.GPipe.Internal.Expr
      Graphics.GPipe.Internal.Format
      Graphics.GPipe.Internal.FragmentStream
      Graphics.GPipe.Internal.FrameBuffer
      Graphics.GPipe.Internal.PrimitiveArray
      Graphics.GPipe.Internal.PrimitiveStream
      Graphics.GPipe.Internal.Shader
      Graphics.GPipe.Internal.Texture
      Graphics.GPipe.Internal.Uniform
      Graphics.GPipe.Internal.Orphans
  ghc-options:
      -Wall
  build-depends:
      base              >= 4 && < 5
    , Boolean
    , GLFW-b
    , JuicyPixels
    , async
    , containers
    , exception-transformers
    , gl
    , hashtables
    , lens
    , linear
    , stm
    , time
    , transformers

executable lambdaray
  default-language: Haskell2010
  hs-source-dirs:   tools
  main-is:          lambdaray.hs
  ghc-options:
      -Wall
      -threaded
  build-depends:
      base < 5
    , ghc
    , ghc-paths
    , lambdaray

test-suite testsuite
  default-language: Haskell2010
  hs-source-dirs:   test
  type: exitcode-stdio-1.0
  main-is:          testsuite.hs
  other-modules:
      Graphics.GPipe.ExprSpec
  ghc-options:
      -Wall
      -threaded
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , hspec
    , lambdaray
