name:           GPipe-Core
version:        0.2.3.2
cabal-version:  >= 1.10
build-type:     Simple
author:         Tobias Bexelius
license:        MIT
license-file:   LICENSE
copyright:      Tobias Bexelius
category:       Graphics
stability:      Experimental
synopsis:       Typesafe functional GPU graphics programming
homepage:       https://github.com/tobbebex/GPipe-Core#readme
bug-reports:    https://github.com/tobbebex/GPipe-Core/issues
description:
                A typesafe API based on the conceptual model of OpenGL, but without the imperative state machine.
                Aims to be as close to the raw OpenGL performance as possible, without compromising type safety or functional style.
                Includes DSL for shaders to provide type safety even when crossing into that domain.
                Uses OpenGL 4.5 core profile under the hood.
maintainer:     Pippijn van Steenhoven
data-files:     CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/homectl/workspace
  subdir:   GPipe-Core

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      Graphics.GPipe
      Graphics.GPipe.Buffer
      Graphics.GPipe.Context
      Graphics.GPipe.Expr
      Graphics.GPipe.Format
      Graphics.GPipe.FragmentStream
      Graphics.GPipe.FrameBuffer
      Graphics.GPipe.GeometryStream
      Graphics.GPipe.Linear
      Graphics.GPipe.PrimitiveArray
      Graphics.GPipe.PrimitiveStream
      Graphics.GPipe.Sampler
      Graphics.GPipe.Shader
      Graphics.GPipe.Texture
      Graphics.GPipe.TransformFeedback
      Graphics.GPipe.Uniform
      Graphics.GPipe.Orphans
      -- Internal modules, exported for tests and power users, but don't have
      -- a stable API and are not necessarily safe to use.
      Graphics.GPipe.Debugger.Compile
      Graphics.GPipe.Debugger.Eval
      Graphics.GPipe.Debugger.PrimFuns
      Graphics.GPipe.Debugger.Value
      Graphics.GPipe.Internal.Buffer
      Graphics.GPipe.Internal.Compiler
      Graphics.GPipe.Internal.Context
      Graphics.GPipe.Internal.Debug
      Graphics.GPipe.Internal.Expr
      Graphics.GPipe.Internal.Format
      Graphics.GPipe.Internal.FragmentStream
      Graphics.GPipe.Internal.FrameBuffer
      Graphics.GPipe.Internal.GeometryStream
      Graphics.GPipe.Internal.Linear
      Graphics.GPipe.Internal.PrimitiveArray
      Graphics.GPipe.Internal.PrimitiveStream
      Graphics.GPipe.Internal.Shader
      Graphics.GPipe.Internal.Texture
      Graphics.GPipe.Internal.TransformFeedback
      Graphics.GPipe.Internal.Uniform
      Graphics.GPipe.Internal.Orphans
      Graphics.GPipe.Optimizer.ConstExpr
      Graphics.GPipe.Optimizer.Decls
      Graphics.GPipe.Optimizer.Deinline
      Graphics.GPipe.Optimizer.DFG
      Graphics.GPipe.Optimizer.FunctionGenerator
      Graphics.GPipe.Optimizer.GLSL
      Graphics.GPipe.Optimizer.Liveness
      Graphics.GPipe.Optimizer.StructuralEquality
      Graphics.GPipe.Optimizer
  other-modules:
      -- Data structures, not useful for users of the library.
      Data.SNMap
  ghc-options:
      -Wall
  build-depends:
      base                          >= 4.9 && < 5
    , Boolean                       >= 0.2 && < 0.3
    , attoparsec                    >= 0.10 && < 0.15
    , containers                    >= 0.5 && < 0.7
    , exception-transformers        >= 0.3 && < 0.5
    , fgl                           >= 5.3 && < 6
    , gl                            >= 0.8 && < 0.10
    , graphviz                      >= 2999.10 && < 2999.21
    , lens                          >= 4.15.2 && < 6
    , linear                        >= 1.18 && < 1.22
    , scientific                    >= 0.3.1 && < 0.4
    , text                          >= 0.10 && < 1.3
    , transformers                  >= 0.5.2 && < 0.6
    , unordered-containers          >= 0.2 && < 0.3

test-suite testsuite
  default-language: Haskell2010
  hs-source-dirs:   test
  type: exitcode-stdio-1.0
  main-is:          testsuite.hs
  other-modules:
      Graphics.GPipe.Debugger.EvalSpec
      Graphics.GPipe.ExprSpec
      Graphics.GPipe.Optimizer.DeinlineSpec
      Graphics.GPipe.Optimizer.GLSLSpec
      Test.GLSL
  ghc-options:
      -Wall
      -rtsopts
      -threaded
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , GPipe-Core
    , attoparsec
    , bytestring
    , hspec
    , lens
    , text

benchmark bench
  default-language: Haskell2010
  hs-source-dirs:   bench
  type: exitcode-stdio-1.0
  main-is:          bench.hs
  other-modules:
      Graphics.GPipe.ExprBench
      Graphics.GPipe.ExprBenchSimple
      LambdaRay.Config
      LambdaRay.Schwarzschild
  ghc-options:
      -Wall
      -rtsopts
      -threaded
  build-depends:
      base < 5
    , GPipe-Core
    , criterion
    , lens
    , text

benchmark bench-simple
  default-language: Haskell2010
  hs-source-dirs:   bench
  type: exitcode-stdio-1.0
  main-is:          simple.hs
  other-modules:
      Graphics.GPipe.ExprBenchSimple
      LambdaRay.Config
      LambdaRay.Schwarzschild
  ghc-options:
      -Wall
      -rtsopts
      -threaded
  build-depends:
      base < 5
    , GPipe-Core
    , lens
    , text

executable optshader
  default-language: Haskell2010
  hs-source-dirs:   tools
  main-is:          optshader.hs
  ghc-options:
      -Wall
      -rtsopts
      -threaded
  build-depends:
      base < 5
    , GPipe-Core
    , text
    , time
