name:           GPipe
version:        2.2.5
cabal-version:  >= 1.10
build-type:     Simple
author:         Tobias Bexelius
license:        MIT
license-file:   LICENSE
copyright:      Tobias Bexelius
category:       Graphics
stability:      Experimental
synopsis:       Typesafe functional GPU graphics programming
homepage:       https://github.com/tobbebex/GPipe-Core#readme
bug-reports:    https://github.com/tobbebex/GPipe-Core/issues
description:
                A typesafe API based on the conceptual model of OpenGl, but without the imperative state machine.
                Aims to be as close to the raw OpenGl performance as possible, without compromising type safety or functional style.
                Includes DSL for shaders to provide type safety even when crossing into that domain.
                Uses OpenGl 3.3 core profile under the hood.
maintainer:     Tobias Bexelius
data-files:     CHANGELOG.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base < 5
    , Boolean
    , containers
    , exception-transformers
    , gl
    , hashtables
    , lens
    , linear
    , text
    , transformers
  exposed-modules:
      Graphics.GPipe
      Graphics.GPipe.Buffer
      Graphics.GPipe.Context
      Graphics.GPipe.Expr
      Graphics.GPipe.Format
      Graphics.GPipe.FragmentStream
      Graphics.GPipe.FrameBuffer
      Graphics.GPipe.Linear
      Graphics.GPipe.PrimitiveArray
      Graphics.GPipe.PrimitiveStream
      Graphics.GPipe.Sampler
      Graphics.GPipe.Shader
      Graphics.GPipe.Texture
      Graphics.GPipe.Uniform
      Graphics.GPipe.Orphans
  -- other-modules:
      Data.SNMap
      Graphics.GPipe.Internal.Buffer
      Graphics.GPipe.Internal.Compiler
      Graphics.GPipe.Internal.Context
      Graphics.GPipe.Internal.Expr
      Graphics.GPipe.Internal.Format
      Graphics.GPipe.Internal.FragmentStream
      Graphics.GPipe.Internal.FrameBuffer
      Graphics.GPipe.Internal.Linear
      Graphics.GPipe.Internal.PrimitiveArray
      Graphics.GPipe.Internal.PrimitiveStream
      Graphics.GPipe.Internal.Shader
      Graphics.GPipe.Internal.Texture
      Graphics.GPipe.Internal.Uniform
      Graphics.GPipe.Internal.Orphans

test-suite testsuite
  default-language: Haskell2010
  hs-source-dirs:   test
  type: exitcode-stdio-1.0
  main-is:          testsuite.hs
  other-modules:
      Graphics.GPipe.ExprSpec
  ghc-options:
      -Wall
      -threaded
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , GPipe
    , hspec
