name:                lambdacnc
version:             0.0.1
synopsis:            GPU Ray Tracer
description:         GPU Ray Tracer
homepage:            https://homectl.org/lambdacnc
license:             BSD3
license-file:        LICENSE
author:              pippijn
maintainer:          pippijn@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/homectl/workspace
  subdir:   lambdacnc

library
  default-language:    Haskell2010
  hs-source-dirs: src
  exposed-modules:
      LambdaCNC.Config
      LambdaCNC.GPU
      LambdaCNC.Pipeline
      LambdaCNC.Shaders.Deferred.Geometry
      LambdaCNC.Shaders.Blend
      LambdaCNC.Shaders.Bulb
      LambdaCNC.Shaders.Common
      LambdaCNC.Shaders.GaussianBlur
      LambdaCNC.Shaders.LightInfo
      LambdaCNC.Shaders.Quad
      LambdaCNC.Shaders.Shadow
      LambdaCNC.Shaders.Solids
  ghc-options:
      -Wall
  build-depends:
      base              >= 4 && < 5
    , GPipe-Core        >= 0.2.3 && < 0.2.4
    , GPipe-Engine
    , GPipe-Fonts
    , GPipe-GLFW4       >= 2.0 && < 2.1
    , data-default
    , directory
    , filepath
    , lens
    , text
    , time

executable lambdacnc
  default-language: Haskell2010
  hs-source-dirs:   tools
  main-is:          lambdacnc.hs
  ghc-options:
      -Wall
      -rtsopts
      -threaded
  build-depends:
      base < 5
    , lambdacnc
    , livecoding
