name:                lambdaray
version:             0.0.1
synopsis:            GPU Ray Tracer
description:         GPU Ray Tracer
homepage:            https://homectl.org/lambdaray
license:             BSD3
license-file:        LICENSE
author:              pippijn
maintainer:          pippijn@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/homectl/lambdaray

library
  default-language:    Haskell2010
  hs-source-dirs: src
  exposed-modules:
      LambdaRay.Config
      LambdaRay.GPU
      LambdaRay.Schwarzschild
  ghc-options:
      -Wall
  build-depends:
      base              >= 4 && < 5
    , GPipe-Core
    , GPipe-GLFW4
    , JuicyPixels
    , lens
    , time

executable lambdaray
  default-language: Haskell2010
  hs-source-dirs:   tools
  main-is:          lambdaray.hs
  ghc-options:
      -Wall
      -threaded
  build-depends:
      base < 5
    , lambdaray
    , livecoding
