name:           livecoding
version:        0.0.2
cabal-version:  >= 1.10
build-type:     Simple
author:         Pippijn van Steenhoven
license:        BSD3
license-file:   LICENSE
copyright:      2021 Pippijn van Steenhoven
category:       Development
stability:      Experimental
homepage:       https://github.com/homectl/workspace
synopsis:       Live Coding tools
description:
                Tools to support Haskell live coding.
maintainer:     Pippijn van Steenhoven

source-repository head
  type:     git
  location: https://github.com/homectl/workspace
  subdir:   livecoding

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Debug.LiveCoding
  build-depends:
      base
    , GPipe-Engine
    , directory
    , filepath
    , ghc
    , ghc-paths
    , split
  ghc-options:
      -Wall
